--- a/static_devs/css/users/mypage/user/mypage_wishes_mobile.css
+++ b/static_devs/css/users/mypage/user/mypage_wishes_mobile.css
@@ -55,12 +55,6 @@
         order: 5;
     }
 
-    /* mypage base 없어서 일단 숨기기... */
-    #top-section,
-    #menu {
-        display: none;
-    }
-
     /* filter section  */
     #filter-section {
         margin-bottom: 0;
